--- a/TextSnippets.Business/TextSnippets.Business.csproj
+++ b/TextSnippets.Business/TextSnippets.Business.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TextSnippets.Data\TextSnippets.Data.csproj" />
   </ItemGroup>
 
