--- a/TextSnippets.BackEnd/appsettings.json
+++ b/TextSnippets.BackEnd/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AzureAd": {
+    "Scopes": "api.scope",
+    "ClientId": "7893cfa1-3908-49e6-b6b2-fda77793e9e3",
+    "Instance": "https://login.microsoftonline.com",
+    "TenantId": "6b795dbc-0b12-4a90-8191-7e74b92697f1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
