--- a/TextSnippets/package.json
+++ b/TextSnippets/package.json
@@ -25,6 +25,7 @@
     "@azure/msal-angular": "^2.3.1",
     "@azure/msal-browser": "^2.25.0",
     "jest-editor-support": "*",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
